--- a/views/embed.html
+++ b/views/embed.html
@@ -11,7 +11,12 @@
           <h4 class="modal-title">Example Data Set</h4>
         </div>
         <div class="modal-body">
-          <p><div class="fb-share-button" data-href="http://buffaloopengis.azurewebsites.net/" data-layout="button_count"></div></p>
+          <p><div class="fb-share-button" data-href="http://buffaloopengis.azurewebsites.net/" data-layout="button_count"></div>
+          <a class="twitter-share-button" href="https://twitter.com/share">Tweet</a>
+          <script type="text/javascript">
+          window.twttr=(function(d,s,id){var t,js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id)){return}js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);return window.twttr||(t={_e:[],ready:function(f){t._e.push(f)}})}(document,"script","twitter-wjs"));
+          </script>
+          </p>
           <p>Map Description</p>
         </div>
         <div class="modal-footer">
