--- a/views/edit.html
+++ b/views/edit.html
@@ -9,7 +9,7 @@
         <div class="form-group">
           <label class="col-xs-3 control-label" for="title">Map Name:</label>
           <div class="col-xs-6">
-          <input id="titleTop" name="titleTop" type="text" ng-keypress="clear()" ng-model="route.mapId" placeholder="What's this map about?" class="form-control input-normal">
+          <input id="titleTop" name="titleTop" type="text" ng-keypress="clear()" ng-model="thisMap.mapName" placeholder="What's this map about?" class="form-control input-normal">
           <span class="help-block"></span>
           </div>
         </div>
@@ -44,7 +44,7 @@
                 <div class="form-group">
                   <label class="col-xs-3 control-label" for="title">Map Name:</label>
                   <div class="col-xs-6">
-                  <input id="title" name="title" type="text" ng-keypress="clear()" ng-model="route.mapId" placeholder="What's this map about?" class="form-control input-normal">
+                  <input id="title" name="title" type="text" ng-keypress="clear()" ng-model="thisMap.mapName" placeholder="What's this map about?" class="form-control input-normal">
                   <span class="help-block"></span>
                   </div>
                 </div>
@@ -61,9 +61,9 @@
 
                 <!-- Textarea -->
                 <div class="form-group">
-                  <label class="col-md-3 control-label" for="instructions">Instructions:</label>
+                  <label class="col-md-3 control-label" for="description">Description:</label>
                   <div class="col-md-6">
-                    <textarea class="form-control" id="instructions" name="Instructions" ng-model="thisMap.Instructions" placeholder="Instructions for people who are adding points to the map."></textarea>
+                    <textarea class="form-control" id="description" name="Description" ng-model="thisMap.Description" placeholder="Instructions for people who are adding points to the map."></textarea>
                   </div>
                 </div>
 
