--- a/views/profile.html
+++ b/views/profile.html
@@ -35,12 +35,12 @@
     {margin-top:20px;
     }
 
-        
+
     </style>
-    
+
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" >
-   
-   
+
+
           <div class="panel panel-info">
             <div class="panel-heading">
               <h3 class="panel-title">{{viewUserProfile.name}}</h3>
@@ -48,13 +48,13 @@
             <div class="panel-body">
               <div class="row">
                 <div class="col-md-3 col-lg-3 " align="center"> <img alt="User Pic" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=100" class="img-circle"> </div>
-                
-                <div class=" col-md-9 col-lg-9 "> 
+
+                <div class=" col-md-9 col-lg-9 ">
                   <table class="table table-user-information">
                     <tbody>
                       <tr>
                         <td>Email:</td>
-                        <td><a href="mailto:info@support.com">{{viewUserProfile.email}}</a></td>
+                        <td><a href="mailto:{{viewUserProfile.email}}">{{viewUserProfile.email}}</a></td>
                       </tr>
                       <tr>
                         <td>Description:</td>
@@ -77,19 +77,19 @@
                         <td>
                             <ul>
                                 <li ng-repeat="(mapname, map) in viewUserProfile.maps">
-                                    <a href="/index.html#/map/{{viewUserProfile.$id}}/{{mapname}}">{{mapname}}</a></td>  
+                                    <a href="/index.html#/map/{{viewUserProfile.$id}}/{{mapname}}">{{mapname}}</a></td>
                                 </li>
                             </ul>
-                            
+
                       </tr>
                     </tbody>
                   </table>
-                  
+
                 </div>
               </div>
             </div>
 
-            
+
           </div>
         </div>
 </div>
