Updated homepage to use maps that work.

--- a/views/embed.html
+++ b/views/embed.html
@@ -1,9 +1,9 @@
 <div>
   <button data-toggle="modal" href="#myModal" class="btn btn-default">Details</button>
-  <h2 style="display:inline;padding:10px;">{{thisMap.mapName}}</h2>
+  <span style="display:inline;padding-left:10px;">{{thisMap.mapName}}</span>
 
   <!--Map-->
-  <div id='map' class="fullscreen"></div>
+  <div id='map' class="embed"></div>
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
