--- a/views/index.html
+++ b/views/index.html
@@ -78,10 +78,10 @@
             <div class="grid mask">
             <figure class="embed-responsive embed-responsive-4by3">
               <!-- img class="img-responsive" src="assets/img/portfolio/folio01.jpg" alt="" -->
-              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:7/0" alt="Buffalo High Schools" scrolling="no" seamless></iframe>
+              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:7/UWHighSchool" alt="Buffalo High Schools" scrolling="no" seamless></iframe>
               <figcaption>
                 <h5>Buffalo High Schools</h5>
-                <a href="#/map/simplelogin:7/0" class="btn btn-primary btn-lg">Take a Look</a>
+                <a href="#/map/simplelogin:7/UWHighSchool" class="btn btn-primary btn-lg">Take a Look</a>
               </figcaption><!-- /figcaption -->
             </figure><!-- /figure -->
             </div><!-- /grid-mask -->
@@ -92,10 +92,10 @@
             <div class="grid mask">
             <figure class="embed-responsive embed-responsive-4by3">
               <!-- img class="img-responsive" src="assets/img/portfolio/folio01.jpg" alt="" -->
-              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:3/200" alt="Map Name" scrolling="no" seamless></iframe>
+              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:10/CCRNProviders" alt="Map Name" scrolling="no" seamless></iframe>
               <figcaption>
-                <h5>Map Name</h5>
-                <a href="#/map/simplelogin:3/200" class="btn btn-primary btn-lg">Take a Look</a>
+                <h5>CCRN - Providers</h5>
+                <a href="#/map/simplelogin:10/CCRNProviders" class="btn btn-primary btn-lg">Take a Look</a>
               </figcaption><!-- /figcaption -->
             </figure><!-- /figure -->
             </div><!-- /grid-mask -->
@@ -106,10 +106,10 @@
             <div class="grid mask">
             <figure class="embed-responsive embed-responsive-4by3">
               <!-- img class="img-responsive" src="assets/img/portfolio/folio01.jpg" alt="" -->
-              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:3/200" alt="Map Name" scrolling="no" seamless></iframe>
+              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:9/BPNPropertyInventory" alt="Map Name" scrolling="no" seamless></iframe>
               <figcaption>
-                <h5>Map Name</h5>
-                <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+                <h5>Buffalo Promise Network - Property Inventory</h5>
+                <a href="#/map/simplelogin:9/BPNPropertyInventory" class="btn btn-primary btn-lg">Take a Look</a>
               </figcaption><!-- /figcaption -->
             </figure><!-- /figure -->
             </div><!-- /grid-mask -->
@@ -120,10 +120,10 @@
             <div class="grid mask">
             <figure class="embed-responsive embed-responsive-4by3">
               <!-- img class="img-responsive" src="assets/img/portfolio/folio01.jpg" alt="" -->
-              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:3/200" alt="Map Name" scrolling="no" seamless></iframe>
+              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:11/GGBGardens" alt="Map Name" scrolling="no" seamless></iframe>
               <figcaption>
-                <h5>Map Name</h5>
-                <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+                <h5>Community Gardens</h5>
+                <a href="#/map/simplelogin:11/GGBGardens" class="btn btn-primary btn-lg">Take a Look</a>
               </figcaption><!-- /figcaption -->
             </figure><!-- /figure -->
             </div><!-- /grid-mask -->
@@ -134,10 +134,10 @@
             <div class="grid mask">
             <figure class="embed-responsive embed-responsive-4by3">
               <!-- img class="img-responsive" src="assets/img/portfolio/folio01.jpg" alt="" -->
-              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:3/200" alt="Map Name" scrolling="no" seamless></iframe>
+              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:13/PPGUWElectedOfficials" alt="Map Name" scrolling="no" seamless></iframe>
               <figcaption>
-                <h5>Map Name</h5>
-                <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+                <h5>Elected Officials</h5>
+                <a href="#/map/simplelogin:13/PPGUWElectedOfficials" class="btn btn-primary btn-lg">Take a Look</a>
               </figcaption><!-- /figcaption -->
             </figure><!-- /figure -->
             </div><!-- /grid-mask -->
@@ -148,10 +148,10 @@
             <div class="grid mask">
             <figure class="embed-responsive embed-responsive-4by3">
               <!-- img class="img-responsive" src="assets/img/portfolio/folio01.jpg" alt="" -->
-              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:3/200" alt="Map Name" scrolling="no" seamless></iframe>
+              <iframe class="embed-responsive-item" src="embed.html#/map/simplelogin:14/UHCReTree" alt="University Height Collaborative - ReTree Survey" scrolling="no" seamless></iframe>
               <figcaption>
-                <h5>Map Name</h5>
-                <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+                <h5>UHC ReTree Survey</h5>
+                <a href="#/map/simplelogin:14/UHCReTree" class="btn btn-primary btn-lg">Take a Look</a>
               </figcaption><!-- /figcaption -->
             </figure><!-- /figure -->
             </div><!-- /grid-mask -->
